simdX86/c2nimsrc/simdAvx.h

int _mm_testz_ps (__m128 a, __m128 b);
int _mm256_testz_ps (__m256 a, __m256 b);
int _mm256_testz_si256 (__m256i a, __m256i b);
__m128d _mm_undefined_pd (void);
__m256d _mm256_undefined_pd (void);
__m128 _mm_undefined_ps (void);
__m256 _mm256_undefined_ps (void);
__m128i _mm_undefined_si128 (void);
__m256i _mm256_undefined_si256 (void);
__m256i _mm256_unpackhi_epi16 (__m256i a, __m256i b);
__m256i _mm256_unpackhi_epi32 (__m256i a, __m256i b);
__m256i _mm256_unpackhi_epi64 (__m256i a, __m256i b);
__m256i _mm256_unpackhi_epi8 (__m256i a, __m256i b);
__m256d _mm256_unpackhi_pd (__m256d a, __m256d b);
__m256 _mm256_unpackhi_ps (__m256 a, __m256 b);
__m256i _mm256_unpacklo_epi16 (__m256i a, __m256i b);
__m256i _mm256_unpacklo_epi32 (__m256i a, __m256i b);
__m256i _mm256_unpacklo_epi64 (__m256i a, __m256i b);
__m256i _mm256_unpacklo_epi8 (__m256i a, __m256i b);
__m256d _mm256_unpacklo_pd (__m256d a, __m256d b);
__m256 _mm256_unpacklo_ps (__m256 a, __m256 b);
__m256d _mm256_xor_pd (__m256d a, __m256d b);
__m256 _mm256_xor_ps (__m256 a, __m256 b);
__m256i _mm256_xor_si256 (__m256i a, __m256i b);
void _mm256_zeroall (void);
void _mm256_zeroupper (void);