simdX86/simdAvxGeneric.nim

proc testz*(a: m128; b: m128): cint {.importc: "_mm_testz_ps", header: "immintrin.h".}
proc testz*(a: m256; b: m256): cint {.importc: "_mm256_testz_ps", header: "immintrin.h".}
proc testz_si256*(a: m256i; b: m256i): cint {.importc: "_mm256_testz_si256",
                                        header: "immintrin.h".}
proc undefined*(): m128d {.importc: "_mm_undefined_pd", header: "immintrin.h".}
proc undefined*(): m256d {.importc: "_mm256_undefined_pd", header: "immintrin.h".}
proc undefined*(): m128 {.importc: "_mm_undefined_ps", header: "immintrin.h".}
proc undefined*(): m256 {.importc: "_mm256_undefined_ps", header: "immintrin.h".}
proc undefined_si128*(): m128i {.importc: "_mm_undefined_si128",
                              header: "immintrin.h".}
proc undefined_si256*(): m256i {.importc: "_mm256_undefined_si256",
                              header: "immintrin.h".}
proc unpackhi_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_unpackhi_epi16",
    header: "immintrin.h".}
proc unpackhi_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_unpackhi_epi32",
    header: "immintrin.h".}
proc unpackhi_epi64*(a: m256i; b: m256i): m256i {.importc: "_mm256_unpackhi_epi64",
    header: "immintrin.h".}
proc unpackhi_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_unpackhi_epi8",
    header: "immintrin.h".}
proc unpackhi*(a: m256d; b: m256d): m256d {.importc: "_mm256_unpackhi_pd",
                                      header: "immintrin.h".}
proc unpackhi*(a: m256; b: m256): m256 {.importc: "_mm256_unpackhi_ps",
                                   header: "immintrin.h".}
proc unpacklo_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_unpacklo_epi16",
    header: "immintrin.h".}
proc unpacklo_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_unpacklo_epi32",
    header: "immintrin.h".}
proc unpacklo_epi64*(a: m256i; b: m256i): m256i {.importc: "_mm256_unpacklo_epi64",
    header: "immintrin.h".}
proc unpacklo_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_unpacklo_epi8",
    header: "immintrin.h".}
proc unpacklo*(a: m256d; b: m256d): m256d {.importc: "_mm256_unpacklo_pd",
                                      header: "immintrin.h".}
proc unpacklo*(a: m256; b: m256): m256 {.importc: "_mm256_unpacklo_ps",
                                   header: "immintrin.h".}
proc `xor`*(a: m256d; b: m256d): m256d {.importc: "_mm256_xor_pd", header: "immintrin.h".}
proc `xor`*(a: m256; b: m256): m256 {.importc: "_mm256_xor_ps", header: "immintrin.h".}
proc xor_si256*(a: m256i; b: m256i): m256i {.importc: "_mm256_xor_si256",
                                       header: "immintrin.h".}
proc zeroall*() {.importc: "_mm256_zeroall", header: "immintrin.h".}
proc zeroupper*() {.importc: "_mm256_zeroupper", header: "immintrin.h".}